--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "oli",
-  "version": "0.1.0-rc.1",
+  "version": "0.1.0",
   "description": "Oli language parser for node.js",
   "homepage": "http://github.com/h2non/oli.js",
   "bugs": "https://github.com/h2non/oli.js/issues",
