--- a/package.json
+++ b/package.json
@@ -40,10 +40,10 @@
     "pegjs": "~0.8.0"
   },
   "devDependencies": {
-    "grunt-mocha-cli": "~1.0.3",
+    "grunt-mocha-cli": "~1.5.0",
     "grunt-contrib-watch": "~0.5.0",
     "grunt-contrib-clean": "~0.5.0",
-    "matchdep": "~0.1.2",
+    "matchdep": "~0.3.0",
     "chai": "~1.8.1",
     "grunt-release": "~0.6.0",
     "grunt-livescript": "~0.5.1",
@@ -51,6 +51,9 @@
     "mkdirp": "~0.3.5",
     "suppose": "~0.3.0",
     "sinon": "~1.7.3",
-    "rimraf": "~2.2.4"
+    "rimraf": "~2.2.4",
+    "traverse": "~0.6.6",
+    "browserify": "~3.20.0",
+    "grunt-browserify": "~1.3.0"
   }
 }
