--- a/package.json
+++ b/package.json
@@ -28,17 +28,18 @@
   "keywords": [
     "parser",
     "ast",
+    "compiler",
     "language",
     "config",
-    "minimal",
     "json",
     "yaml",
     "ini",
-    "spec"
+    "toml",
+    "cson",
+    "dsl",
+    "rspec"
   ],
-  "dependencies": {
-    "pegjs": "~0.8.0"
-  },
+  "dependencies": {},
   "devDependencies": {
     "grunt-mocha-cli": "~1.5.0",
     "grunt-contrib-watch": "~0.5.0",
@@ -54,6 +55,8 @@
     "rimraf": "~2.2.4",
     "traverse": "~0.6.6",
     "browserify": "~3.20.0",
-    "grunt-browserify": "~1.3.0"
+    "grunt-browserify": "~1.3.0",
+    "grunt-peg": "~1.1.0",
+    "grunt-benchmark": "~0.2.0"
   }
 }
