feat(parser): initial test parser implementation (in progress)

--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "oli",
-  "description": "Oli language parser for the browser",
+  "description": "Oli language parser",
   "version": "0.1.0",
   "license": "MIT",
   "author": {
