--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "oli",
   "version": "0.1.0",
-  "description": "Oli language parser for node.js",
+  "description": "Oli language parser",
   "homepage": "http://github.com/h2non/oli.js",
   "bugs": "https://github.com/h2non/oli.js/issues",
   "author": {
