--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "traverse": "~0.6.6",
     "grunt-browserify": "~1.3.0",
     "grunt-peg": "~1.1.0",
-    "grunt-benchmark": "~0.2.0"
+    "grunt-benchmark": "~0.2.0",
+    "grunt-contrib-uglify": "~0.3.2"
   }
 }
