--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "dsl",
     "rspec"
   ],
-  "dependencies": {},
+  "dependencies": {
+    "commander": "~2.1.0"
+  },
   "devDependencies": {
     "grunt-mocha-cli": "~1.5.0",
     "grunt-contrib-watch": "~0.5.0",
@@ -49,10 +51,8 @@
     "grunt-release": "~0.6.0",
     "grunt-livescript": "~0.5.1",
     "LiveScript": "~1.2.0",
-    "mkdirp": "~0.3.5",
     "suppose": "~0.3.0",
     "sinon": "~1.7.3",
-    "rimraf": "~2.2.4",
     "traverse": "~0.6.6",
     "grunt-browserify": "~1.3.0",
     "grunt-peg": "~1.1.0",
