--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "oli",
+  "version": "0.1.0-rc.1",
   "description": "Oli language parser and compiler for the browser",
-  "version": "0.1.0",
   "license": "MIT",
   "author": {
     "name": "Tomas Aparicio"
