--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "grunt-browserify": "~1.3.0",
     "grunt-peg": "~1.1.0",
     "grunt-benchmark": "~0.2.0",
-    "grunt-contrib-uglify": "~0.3.2"
+    "grunt-contrib-uglify": "~0.3.2",
+    "grunt-jsdoc": "~0.5.1"
   }
 }
