--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "grunt-peg": "~1.1.0",
     "grunt-benchmark": "~0.2.0",
     "grunt-contrib-uglify": "~0.3.2",
-    "grunt-jsdoc": "~0.5.1"
+    "grunt-jsdoc": "~0.5.1",
+    "grunt-plato": "~0.2.1"
   }
 }
