--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "oli",
-  "version": "0.1.0-rc.1",
+  "version": "0.1.0",
   "description": "Oli language parser and compiler for the browser",
   "license": "MIT",
   "author": {
